# hatchet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  SKILL.md  build.hxml
.github/workflows/: ci.yml
docs/: m11-generics.md
examples/: Main.hx
examples/shapes/: .gitignore  Circle.hx  Geometry.hx  README.md  Rectangle.hx  Shape.hx  World.hx  main.cpp
src/: ast.rs  cli.rs  diag.rs  discover.rs  finals.rs  lexer.rs  lib.rs  main.rs  parser.rs  scan.rs  stdafx.rs
src/codegen/: amalgam.rs  header.rs  holder.rs  mod.rs  ownership.rs  source.rs
src/parser/: decls.rs  expr.rs  stmt.rs  types.rs
src/sema/: escape.rs  includes.rs  mod.rs  types.rs  validate.rs
tests/: abstract_compile.rs  abstract_tree_compile.rs  codegen_control.rs  codegen_core.rs  codegen_intrinsics.rs  codegen_ownership.rs  codegen_proxy.rs  codegen_rawptr.rs  codegen_types.rs  compile_gate.rs  custom_iterator_compile.rs  diagnostics.rs  empty_array_return_compile.rs  enum_abstract_compile.rs  enum_adt_compile.rs  example_compile.rs  header_codegen.rs  header_only_compile.rs  header_only_module_fn_compile.rs  header_only_ordering_compile.rs  if_expr_compile.rs  include_resolve.rs  key_value_iteration_compile.rs  lex_corpus.rs  loop_break_compile.rs  module_fn_compile.rs  null_coalesce_compile.rs  nullable_string_compile.rs  ordered_map_compile.rs  owned_forward_compile.rs  ownership_runtime.rs  parse_corpus.rs  property_compile.rs  sema_corpus.rs  source_codegen.rs  stack_only_compile.rs  stdafx_golden.rs  stdlib_compile.rs  string_switch_compile.rs  try_catch_compile.rs  (+2 more)
(+14 files in other folders)
