[package]
name = "hatchet"
version = "0.2.8"
edition = "2021"
description = "Hatchet - a Haxe 4.x to C++98 transpiler for legacy platforms (Visual C++ 6.0, Windows 9x, older Unix)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andrewglind/hatchet"

[[bin]]
name = "hatchet"
path = "src/main.rs"

[lib]
name = "hatchet"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
